# zclient

./: .gitignore  .gitmodules  CMakeLists.txt  CTestCustom.cmake  README.md
examples/: await_parallel_http_requests.cpp  await_sequential_http_requests.cpp  callback_parallel_http_requests.cpp  callback_sequential_http_requests.cpp  multithreaded_await_parallel_http_requests.cpp  websocket_client.md
frontend/: zclient_cli.cpp
include/: asio_context_provider.hpp  http_client.hpp  websocket_client.hpp  zclient.hpp
src/: http_client.cpp  websocket_client.cpp
test/: test_http_client.cpp
test/mock_server/: kill_mock_server.cmake  launch_mock_server.sh  mock_server.js  mock_server_config.cnf  package-lock.json  package.json  test_endpoint_config.json
